ingrandito spazio etichetta centrale

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -17,11 +17,17 @@
    <widget class="QLabel" name="timerLabel">
     <property name="geometry">
      <rect>
-      <x>210</x>
+      <x>120</x>
       <y>90</y>
-      <width>261</width>
-      <height>16</height>
+      <width>431</width>
+      <height>20</height>
      </rect>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>431</width>
+      <height>0</height>
+     </size>
     </property>
     <property name="layoutDirection">
      <enum>Qt::LayoutDirection::LeftToRight</enum>
